@@ -1,0 +1,3 @@
+MD5 4ad554d1c5694cafb52c71c5dd8d4df5 acgmake-1.2.tgz 60894
+RMD160 3803fe5694451b6da5111e20e71fad6e377eeeb7 acgmake-1.2.tgz 60894
+SHA256 6da22b8cc63c24ada430ca3120357cff774f1348f11d892956dba49cc9d680e8 acgmake-1.2.tgz 60894
