@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/acgmake
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/acgmake/ChangeLog,v 1.1 2006/09/18 20:08:42 dsd Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/acgmake/ChangeLog,v 1.2 2006/09/19 15:12:37 dsd Exp $
+
+*acgmake-1.2-r1 (19 Sep 2006)
+
+  19 Sep 2006; Daniel Drake <dsd@gentoo.org> -acgmake-1.2.ebuild,
+  +acgmake-1.2-r1.ebuild:
+  Fix permissions of installed files
 
 *acgmake-1.2 (18 Sep 2006)
 
